# fledge-plugin-bench

./: .trust.toml  Cargo.toml  README.md  fledge.toml  plugin.toml
.claude/commands/specsync/: create-spec.md
.claude/skills/spec-sync/: SKILL.md
.cursor/commands/: specsync-create-spec.md
.cursor/skills/spec-sync/: SKILL.md
.gemini/commands/specsync/: create-change.toml  create-spec.toml
.github/workflows/: ci.yml
.specsync/: adoption-report.json  registry.toml  sdd.json
.specsync/changes/CHG-0001-adopt-specsync-5-0-1-and-trust-1-0-0-governance-for-the-benchmark-fledge-plugin/: approvals.json  change.md  context.md  design.md  docs.md  plan.md  research.md  state.json  tasks.md  testing.md  verification.json
.specsync/changes/CHG-0003-address-valid-rollout-review-and-strict-documentation-findings/: approvals.json  change.md  context.md  design.md  docs.md  state.json  tasks.md  testing.md  verification.json
.specsync/changes/CHG-0003-address-valid-rollout-review-and-strict-documentation-findings/deltas/: bench.md
.specsync/changes/CHG-0004-correct-bench-rollout-governance-metadata-classify-all-installed-agent-integrat/: approvals.json  change.md  context.md  docs.md  state.json  verification.json
.specsync/changes/CHG-0004-correct-bench-rollout-governance-metadata-classify-all-installed-agent-integrat/deltas/: bench.md
docs/: index.html
specs/bench/: bench.spec.md  context.md  requirements.md  tasks.md  testing.md
src/: main.rs
